--- a/PictureCompressWeb/Views/TestUpload/Index.cshtml
+++ b/PictureCompressWeb/Views/TestUpload/Index.cshtml
@@ -1,140 +1,156 @@
-﻿@*@{
-    ViewBag.Title = "index";
-}*@
-
-<link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="~/Content/swiper-3.4.2.min.css" />
-<link rel="stylesheet" type="text/css" href="~/Content/main.css" />
-<link rel="stylesheet" type="text/css" href="~/Content/share.min.css" />
-<link rel="stylesheet" type="text/css" href="~/Content/bootstrap-slider.min.css" />
-<script src="~/Scripts/plupload/plupload.full.min.js"></script>
-<script src="~/Scripts/jquery.smoothZoom.min.js" ></script>
-<script src="~/Scripts/jquery.share.min.js"></script>
-<script src="~/Scripts/bootstrap-slider.min.js"></script>
+﻿@{
+    Layout = null;
+}
 
 
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <meta charset="utf-8" />
+    <title>在线图片压缩</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/swiper-3.4.2.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/main.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/share.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap-slider.min.css" />
+    <script src="~/Scripts/jquery-1.8.2.min.js"></script>
+    <script src="~/Scripts/layer/layer.js"></script>
+    <script src="~/Scripts/plupload/plupload.full.min.js"></script>
+    <script src="~/Scripts/jquery.smoothZoom.min.js"></script>
+    <script src="~/Scripts/jquery.share.min.js"></script>
+    <script src="~/Scripts/bootstrap-slider.min.js"></script>
+    </head>
 
-    <div id="siteheader" class="siteheadercss">
-        <div style="position:relative;margin-left:96px;"> 
-            <img src="~/Images/logo.png" style="float:left;width:96px;height:96px;margin-left:-96px;"/> 
-            <div style="float:left;margin:10px;">
-                这个在线图像优化器使用最佳优化和压缩算法来达到最小尺寸的JPEG和PNG图像，同时保证最佳质量/尺寸比。在多数情况下优化器可以实现优于其它软件和软件的最佳图像压缩比。
-                上传多达10张图像。等待压缩完成。单击等待任务中的缩略图实现质量设置。使用滚动条来设置压缩级别和鼠标/手势来比较图像。
+<body data-url-host="@ViewBag.appPath">
+
+    <div>
+
+        <div id="siteheader" class="siteheadercss">
+            <div style="position:relative;margin-left:96px;">
+                <img src="~/Images/logo.png" style="float:left;width:96px;height:96px;margin-left:-96px;" />
+                <div style="float:left;margin:10px;">
+                    这个在线图像优化器使用最佳优化和压缩算法来达到最小尺寸的JPEG和PNG图像，同时保证最佳质量/尺寸比。在多数情况下优化器可以实现优于其它软件和软件的最佳图像压缩比。
+                    上传多达10张图像。等待压缩完成。单击等待任务中的缩略图实现质量设置。使用滚动条来设置压缩级别和鼠标/手势来比较图像。
+                </div>
             </div>
+            <div style="clear:both;"></div>
         </div>
-        <div style="clear:both;"></div>
-    </div>
 
 
-    <div style="margin-top:20px;margin-bottom:20px;">
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- 头部横向广告 -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5397041862217985"
-             data-ad-slot="7768490846"
-             data-ad-format="auto"></ins>
-        <script>
+        <div style="margin-top:20px;margin-bottom:20px;">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- 头部横向广告 -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5397041862217985"
+                 data-ad-slot="7768490846"
+                 data-ad-format="auto"></ins>
+            <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
+            </script>
+        </div>
 
-    
-    <div id="main" class="maincss">
 
-            <div id="container" >
+        <div id="main" class="maincss">
+
+            <div id="container">
                 <div class="operatecontainer">
                     <a class="btn btn-default operatecss" id="pickfiles" href="javascript:;">选择图片</a>
                     <a class="btn btn-default operatecss2" id="cleanfiles" href="javascript:;">清除文件</a>
                 </div>
-            <div>
+                <div>
 
-            <div id="filelistcontainer" class="swiper-container filelistcontainer" >
-                <div id="filelist" class="swiper-wrapper filelistwrapper">
-                    <div id="descitem" class="swiper-slide slideitemempty">
-                        <div class="desctext">将您的文件保存到这里</div>
+                    <div id="filelistcontainer" class="swiper-container filelistcontainer">
+                        <div id="filelist" class="swiper-wrapper filelistwrapper">
+                            <div id="descitem" class="swiper-slide slideitemempty">
+                                <div class="desctext">将您的文件保存到这里</div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+
                     </div>
+
                 </div>
 
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-
             </div>
-           
-         </div>
-                
-    </div>
 
             <div style="margin-top:20px;">
-                <button type="button" class="btn btn-default" disabled="disabled" id="mergefiles" >合并文件下载</button>
+                <button type="button" class="btn btn-default" disabled="disabled" id="mergefiles">合并文件下载</button>
             </div>
 
-    </div>
+        </div>
 
 
-    <div id="previewcontainer">
-        <div id="container1">
-            <div id="pic1div" style="height:20px;text-align:center;margin-bottom:5px">原文档:</div>
-            <div id="previewpic1" class="previewpic1">
+        <div id="previewcontainer" style="display:none;">
+            <div id="container1">
+                <div id="pic1div" style="height:20px;text-align:center;margin-bottom:5px">原文档:</div>
+                <div id="previewpic1" class="previewpic1">
                     <div id="origin-preview">
                         @*<img id="imgpic1" src="" style="left:auto;right:auto;" />*@
                     </div>
-            </div>
-        </div>
-        <div id="container2">
-            <div id="pic2div" style="height:20px;text-align:center;margin-bottom:5px;">压缩:</div>
-            <div id="previewpic2" class="previewpic1">
-                <div id="compress-preview">
-                    @*<img id="imgpic2" src="" style="margin:0 auto;" />*@
                 </div>
             </div>
-        </div>
-
-        <div id="containerconfig" data-filename="">
-            <div id="configtype" class="configtypecss">颜色</div>
-            <div id="configvalue" class="configvaluecss">0</div>
-            <div id="configadd" class="configaddcss">+</div>
-            <div style="margin:10px auto; width:25px;">
-                <input id="configslider" style="background-color:#808080;" type="text"  data-slider-id='configSlider' data-slider-min="1" data-slider-max="256" data-slider-step="1" data-slider-value="256" />
+            <div id="container2">
+                <div id="pic2div" style="height:20px;text-align:center;margin-bottom:5px;">压缩:</div>
+                <div id="previewpic2" class="previewpic1">
+                    <div id="compress-preview">
+                        @*<img id="imgpic2" src="" style="margin:0 auto;" />*@
+                    </div>
+                </div>
             </div>
-            <div id="configsub" class="configaddcss">-</div>
-            <div id="applyconfig" class="configapplycss" style="">应用</div>
+
+            <div id="containerconfig" data-filename="">
+                <div id="configtype" class="configtypecss">颜色</div>
+                <div id="configvalue" class="configvaluecss">0</div>
+                <div id="configadd" class="configaddcss">+</div>
+                <div style="margin:10px auto; width:25px;">
+                    <input id="configslider" style="background-color:#808080;" type="text" data-slider-id='configSlider' data-slider-min="1" data-slider-max="256" data-slider-step="1" data-slider-value="256" />
+                </div>
+                <div id="configsub" class="configaddcss">-</div>
+                <div id="applyconfig" class="configapplycss" style="">应用</div>
+            </div>
+
+            <div class="clear"></div>
+
         </div>
 
-        <div class="clear"></div>
-
-    </div>
 
 
+        <div style="margin:10px;">
 
-    <div style="margin:10px;">
-
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- 底部横向广告 -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5397041862217985"
-             data-ad-slot="7489289243"
-             data-ad-format="auto"></ins>
-        <script>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- 底部横向广告 -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-5397041862217985"
+                 data-ad-slot="7489289243"
+                 data-ad-format="auto"></ins>
+            <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+            </script>
 
-    </div>
+        </div>
 
 
-    <div id="footer">
-        <div id="bottom" style="margin:20px auto;">
-            <div id="like-it">喜欢吗？赶快分享一下！</div>
-            <div class="social-share" style="margin-top:10px;margin-bottom:10px;" data-sites="weibo,qq,qzone,tencent" data-title="分享标题" data-description="分享描述" data-image=""></div>
+        <div id="footer">
+            <div id="bottom" style="margin:20px auto;">
+                <div id="like-it">喜欢吗？赶快分享一下！</div>
+                <div class="social-share" style="margin-top:10px;margin-bottom:10px;" data-sites="weibo,qq,qzone,tencent" data-title="分享标题" data-description="分享描述" data-image=""></div>
             </div>
             <p id="footer-privacy">所有上传的数据将在一小时后将被删除。</p>
             <p id="footer-copy">© 2017 jxdong1013</p>
         </div>
-  
- </div>
+
+    </div>
 
 
-<script src="~/Scripts/swiper-3.4.2.min.js" ></script>
-<script src="~/Scripts/upload.js" type="text/javascript"></script>
+    <script src="~/Scripts/swiper-3.4.2.min.js"></script>
+    <script src="~/Scripts/upload.js" type="text/javascript"></script>
+
+</body>
+
+</html>
