--- a/PictureCompressWeb/Views/TestUpload/Index.cshtml
+++ b/PictureCompressWeb/Views/TestUpload/Index.cshtml
@@ -7,7 +7,12 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <meta charset="utf-8" />
+    <meta charset="utf-8" />    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="图片压缩，在线图片压缩，图片压缩软件，PNG压缩，JPG压缩">
+    <meta name="description" content="在线图片压缩。支持JPG压缩，PNG压缩。支持批量压缩图片。">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>在线图片压缩</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css" />
