--- a/PictureCompressWeb/Views/TestUpload/Index.cshtml
+++ b/PictureCompressWeb/Views/TestUpload/Index.cshtml
@@ -26,6 +26,18 @@
     <script src="~/Scripts/jquery.smoothZoom.min.js"></script>
     <script src="~/Scripts/jquery.share.min.js"></script>
     <script src="~/Scripts/bootstrap-slider.min.js"></script>
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?eba55caa9544b13ad436f0deb57eef33";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+
     </head>
 
 <body data-url-host="@ViewBag.appPath">
